# rss-reader

./: .gitignore  Cargo.toml  README.md  rss.db
.github/workflows/: rust.yml
.rss/: saimple_raw.opml
fetch-rss-data/: Cargo.toml  guoyu.html
fetch-rss-data/src/: db.rs  element.rs  main.rs  preprocess.rs
hello-world/: Cargo.toml  README.md
hello-world/src/: app.rs
hello-world/src-tauri/: Cargo.toml  tauri.conf.json
rss-app/: Cargo.toml  README.md  index.html
rss-app/src/: app.rs  main.rs
rss-app/src-tauri/: Cargo.toml  tauri.conf.json
rss-app/src-tauri/src/: components.rs  db.rs  main.rs  process.rs
rss-app/src/wallet/: mod.rs
rss-reader/: Cargo.toml  README.md  guoyu.html  guoyu.md
rss-reader/src/: command.rs  config.rs  db.rs  element.rs  main.rs  preprocess.rs  ui.rs
src/: command.rs  config.rs  element.rs  main.rs  preprocess.rs  ui.rs  utils.rs
src/command/: mod.rs
src/db/: hashmap_db.rs  mod.rs  nosql_database.rs  preprocess.rs  sql_database.rs  sqlite_db.rs  titles.rs  utils.rs
src/ui/: app.rs  logic.rs  mod.rs  modes.rs  stateful_list.rs  ui.rs
