[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"
authors = ["davirain.yin@gmail.com"]
description = "Rust implement rss reade cli for read mirror article."
homepage = ""
documentation = ""
readme = "README.md"
license = "MIT"
keywords = ["rss", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
colored = "2.0.0"
once_cell = "1.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rss = "2.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
structopt = "0.3.26"
tl = "0.7.7"
tokio = { version = "1.21.2", features = ["full"] }
opml = "1.1.5"
tui = "0.19"
crossterm = "0.25"
sqlite = "0.30.2"
serde_json = "1.0.89"
displaydoc = "0.2.3"
simpledb = "0.1.5"
tempfile = "3.3.0"
base64 = "0.13.1"
async-trait = "0.1.58"
num_cpus = "1.14.0"
