[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
html2md = "0.2.13"
once_cell = "1.15.0"
reqwest = "0.11.12"
rss = "2.0.1"
serde = { version = "1.0.145", features = ["derive"] }
tl = "0.7.7"
tokio = { version = "1.21.2", features = ["full"] }
