[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"
authors = ["davirain.yin@gmail.com"]
description = "Rust implement rss reade cli for read mirror article."
homepage = ""
documentation = ""
readme = "README.md"
license = "MIT"
keywords = ["rss", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
colored = "2.0.0"
html2md = "0.2.13"
once_cell = "1.15.0"
reqwest = "0.11.12"
rss = "2.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
structopt = "0.3.26"
tl = "0.7.7"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
yew = "0.19.3"
opml = "1.1.5"
tui = "0.19"
crossterm = "0.25"
